--- a/package.json
+++ b/package.json
@@ -19,5 +19,16 @@
     "express": "^5.1.0",
     "mongoose": "^8.14.1",
     "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^24.3.1",
+    "@types/nodemailer": "^7.0.1",
+    "@types/passport": "^1.0.17",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
