--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "dev": "nodemon index.js",
-    "start:dev": "nodemon ./server/index.ts",
+    "start:dev": "nodemon --exec ts-node-esm index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
