--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
-    "nodemon": "^3.1.10"
+    "nodemailer": "^7.0.6",
+    "nodemon": "^3.1.10",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.9",
@@ -31,6 +33,7 @@
     "@types/node": "^24.3.1",
     "@types/nodemailer": "^7.0.1",
     "@types/passport": "^1.0.17",
+    "@types/validator": "^13.15.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
