--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "license": "ISC",
   "author": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "nodemon index.js",
-    "dev": "nodemon index.js",
+    "start": "nodemon index.ts",
+    "dev": "nodemon index.ts",
     "start:dev": "nodemon --exec ts-node-esm index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
