--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon index.ts",
+  "start": "nodemon --exec ts-node index.ts",
     "dev": "nodemon index.ts",
     "start:dev": "nodemon --exec ts-node-esm index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
