--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "main": "index.ts",
   "scripts": {
-  "start": "nodemon --exec ts-node index.ts",
+    "start": "nodemon --exec ts-node index.ts",
     "dev": "nodemon index.ts",
     "start:dev": "nodemon --exec ts-node-esm index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
     "nodemailer": "^7.0.6",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.9",
