--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "",
   "main": "index.ts",
  "scripts": {
-  "build": "tsc",
-  "start": "node index.js",
+
+  "start": "nodemon index.js",
   "dev": "nodemon --exec ts-node index.ts",
   "start:dev": "nodemon --exec ts-node-esm index.ts",
   "test": "echo \"Error: no test specified\" && exit 1"
