--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "index.ts",
  "scripts": {
 
-  "start": "nodemon index.js",
+  "start": "nodemon --exec ts-node-esm index.ts",
   "dev": "nodemon --exec ts-node index.ts",
   "start:dev": "nodemon --exec ts-node-esm index.ts",
   "test": "echo \"Error: no test specified\" && exit 1"
