--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "author": "",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node-esm index.ts",
-    "dev": "nodemon --exec ts-node index.ts",
-    "start:dev": "nodemon --exec ts-node-esm index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon --exec ts-node server/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
