--- a/package.json
+++ b/package.json
@@ -1,41 +1,51 @@
 {
-  "name": "homebackend",
-  "version": "1.0.0",
-  "description": "",
-  "license": "ISC",
-  "author": "",
-  "main": "index.ts",
-  "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "nodemon --exec ts-node server/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "argon2": "^0.44.0",
-    "axios": "^1.12.2",
-    "body-parser": "^2.2.0",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.14.1",
-    "nodemailer": "^7.0.6",
-    "nodemon": "^3.1.10",
-    "validator": "^13.15.15"
-  },
-  "devDependencies": {
-    "@types/cookie-parser": "^1.4.9",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^24.3.1",
-    "@types/nodemailer": "^7.0.1",
-    "@types/passport": "^1.0.17",
-    "@types/validator": "^13.15.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
-  }
+    "name": "homebackend",
+    "version": "1.0.0",
+    "description": "This is the robust backend for the Vsave digital savings and wallet platform. It is a critical part of the system's architecture, handling all core business logic, from user management and security to payment processing and financial reporting.",
+    "type": "module",
+    "license": "ISC",
+    "author": "",
+    "main": "index.ts",
+    "scripts": {
+        "build": "tsc",
+        "start": "node dist/index.js",
+        "dev": "nodemon --exec ts-node server/index.ts",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix",
+        "format:check": "prettier --check .",
+        "format": "prettier --write ."
+    },
+    "dependencies": {
+        "argon2": "^0.44.0",
+        "axios": "^1.12.2",
+        "body-parser": "^2.2.0",
+        "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
+        "dotenv": "^16.5.0",
+        "express": "^5.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.14.1",
+        "nodemailer": "^7.0.6",
+        "nodemon": "^3.1.10",
+        "validator": "^13.15.15"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.36.0",
+        "@types/cookie-parser": "^1.4.9",
+        "@types/cors": "^2.8.19",
+        "@types/express": "^5.0.3",
+        "@types/jsonwebtoken": "^9.0.10",
+        "@types/node": "^24.3.1",
+        "@types/nodemailer": "^7.0.1",
+        "@types/passport": "^1.0.17",
+        "@types/validator": "^13.15.3",
+        "eslint": "^9.36.0",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.4",
+        "prettier": "^3.6.2",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.9.2",
+        "typescript-eslint": "^8.45.0"
+    }
 }
