--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
     "compilerOptions": {
         "target": "ES2020",
-        "module": "NodeNext",
-        "outDir": "dist",
-        "moduleResolution": "NodeNext",
+        "module": "commonjs",
+        "outDir": "./dist",
+        "rootDir": "./server",
         "esModuleInterop": true,
-        "strict": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "strict": true, // disables all strict rules at once
+        "strictNullChecks": false, // disables null/undefined type checks
+        "noImplicitAny": true, // allows variables without explicit types
+        "useUnknownInCatchVariables": false
     }
 }
