--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
+    "resend": "^6.4.0",
     "validator": "^13.15.15"
   },
   "devDependencies": {
