--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "argon2": "^0.44.0",
     "axios": "^1.12.2",
     "body-parser": "^2.2.0",
@@ -25,7 +26,6 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
-    "resend": "^6.4.0",
     "validator": "^13.15.15"
   },
   "devDependencies": {
