--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
         "typeRoots": ["./types", "./node_modules/@types"]
     },
     "include": ["server", "types"],
-    "exclude": ["node_modules", "dist"]
+    "exclude": ["node_modules"]
 }
