--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,19 @@
         "target": "ES2020",
         "module": "commonjs",
         "outDir": "./dist",
-        "rootDir": ".",
+        "rootDir": "./server",
+
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "strict": true, // enables most strict checks
-        "strictNullChecks": false, // keeps null/undefined type checks off
-        "noImplicitAny": true, // requires explicit types (for safety)
+
+        "strict": true,
+        "strictNullChecks": false,
+        "noImplicitAny": true,
         "useUnknownInCatchVariables": false,
+
         "typeRoots": ["./types", "./node_modules/@types"]
     },
+
     "include": ["server", "types"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "dist"]
 }
